#18 - Movie title below the thumbnail has been word wrapped and a fixed width of 160 pixel, has been added.

--- a/src/main/webapp/resources/css/default-theme.css
+++ b/src/main/webapp/resources/css/default-theme.css
@@ -82,6 +82,11 @@ table.subtitle-table {
     width: 160px;
     height: 200px;
 }
+.movie-title-thumbnail
+{
+    width: 160px;
+    word-wrap: normal;
+}
 
 /* Responsive CSS fix */
 @media (max-width: 979px) {
